@@ -1,0 +1,40 @@
+name: ✅ CI
+on: [push, pull_request]
+jobs:
+  test:
+    strategy:
+      matrix:
+        os:
+          - { icon: 🐧, name: ubuntu  }
+          - { icon: 🍎, name: macos   }
+          - { icon: 🪟, name: windows }
+        perl: [ '5.38', '5.36', '5.34', '5.32', '5.30', '5.28', '5.26', '5.24', '5.22', '5.20', '5.18', '5.16', '5.14', '5.12', '5.10', '5.8' ]
+    name: 🐪 Perl ${{ matrix.perl }} on ${{ matrix.os.icon }}
+    runs-on: ${{ matrix.os.name }}-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Setup Perl
+        uses: shogo82148/actions-setup-perl@v1
+        with:
+          perl-version: ${{ matrix.perl }}
+
+      - name: Install Dependencies
+        run: |
+          perl -V
+          cpanm -v --notest --no-man-pages Module::Build Archive::Tar ExtUtils::PL2Bat
+          cpanm -v --notest --no-man-pages --installdeps --with-develop .
+          pip3 install docutils asciidoc
+
+      - name: Test
+        env:
+          AUTHOR_TESTING: 1
+          RELEASE_TESTING: 1
+          TEXT_MARKUP_TEST_ALL: 1
+        run: prove -lv
+
+      - name: Bundle
+        run: |
+          perl Build.PL
+          ./Build
+          ./Build manifest
+          ./Build dist
