@@ -1,9 +1,10 @@
-_build
-blib
-Text-Markup-*
-MANIFEST
-MANIFEST.bak
-META.*
-Build
-MYMETA.*
-Makefile*
+/_build
+/blib
+/Text-Markup-*
+/MANIFEST
+/MANIFEST.bak
+/*META.*
+/Build
+/Makefile*
+/pm_to_blib
+/latest_changes.md
