@@ -1,32 +1,0 @@
-sudo: true
-language: perl
-perl:
-  - "5.28"
-  - "5.26"
-  - "5.24"
-  - "5.22"
-  - "5.20"
-  - "5.18"
-  - "5.16"
-  - "5.14"
-  - "5.12"
-  - "5.10"
-  - "5.8"
-
-before_install:
-  - sudo pip install docutils
-  - sudo apt-get install asciidoc
-  - eval $(curl https://travis-perl.github.io/init) --auto
-
-jobs:
-  include:
-    - stage: Windows
-      os: windows
-      language: shell
-      before_install:
-        - cinst -y strawberryperl
-        - export "PATH=/c/Strawberry/perl/site/bin:/c/Strawberry/perl/bin:/c/Strawberry/c/bin:$PATH"
-      install:
-        - cpanm --notest --installdeps .
-      script:
-        - cpanm -v --test-only .
