@@ -2,14 +2,40 @@ use strict;
 use warnings;
 use Module::Build;
 
-my $build = Module::Build->new(
+my $class = Module::Build->subclass(
+    class => 'My::Builder',
+    code => q{
+        sub ACTION_tarball_name { print shift->dist_dir . ".tar.gz\n" }
+        sub ACTION_latest_changes {
+            my $self = shift;
+            (my $dv = $self->dist_version) =~ s/^v//;
+            open my $in, '<:raw', 'Changes' or die "Cannot open Changes: $!\n";
+            open my $out, '>:raw', 'latest_changes.md' or die "Cannot open latest_changes.md: $!\n";
+            while (<$in>) { last if /^\Q$dv\E\b/ }
+            print {$out} "Changes for v$dv\n";
+            while (<$in>) {
+                last if /^\s*$/;
+                chomp;
+                if (s/^\s+-/-  /) {
+                    print {$out} "\n";
+                } else {
+                    s/^\s+/ /;
+                }
+                print {$out} $_;
+            }
+            $self->add_to_cleanup('latest_changes.md');
+        }
+    },
+);
+
+my $build = $class->new(
     module_name        => 'Text::Markup',
     license            => 'perl',
     create_makefile_pl => 'traditional',
-    configure_requires => { 'Module::Build' => '0.30' },
+    configure_requires => { 'Module::Build' => '0.4209' },
     build_requires     => {
         'File::Spec::Functions' => 0,
-        'Module::Build'         => '0.30',
+        'Module::Build'         => '0.4209',
         'Test::More'            => '0.96',
     },
     requires => {
@@ -28,16 +54,22 @@ my $build = Module::Build->new(
         'Parse::BBCode'         => '0.15',
         'Text::WikiCreole'      => '0.07',
     },
-    recommends => {
-        'Test::Pod'           => '1.41',
-        'Test::Pod::Coverage' => '1.06',
-    },
     meta_merge => {
+         "meta-spec" => { version => 2 },
         resources => {
-            homepage   => 'http://search.cpan.org/dist/Text-Markup/',
-            bugtracker => 'http://github.com/theory/text-markup/issues/',
-            repository => 'http://github.com/theory/text-markup',
-        }
+            homepage   => 'https://metacpan.org/pod/Text::Markup',
+            bugtracker => 'https://github.com/theory/text-markup/issues/',
+            repository => 'https://github.com/theory/text-markup',
+        },
+        prereqs => {
+            develop => {
+                requires => {
+                    'Test::Pod'           => '1.41',
+                    'Test::Pod::Coverage' => '1.06',
+                    'Test::Spelling'      => '0.25',
+                },
+            },
+        },
     },
 );
 $build->add_build_element('py');
